--- a/app/src/main/res/layout/activity_account_setting.xml
+++ b/app/src/main/res/layout/activity_account_setting.xml
@@ -39,6 +39,7 @@
             android:layout_height="match_parent">
 
             <RelativeLayout
+                android:id="@+id/rl_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
