--- a/app/src/main/res/layout/item_user_head.xml
+++ b/app/src/main/res/layout/item_user_head.xml
@@ -43,6 +43,12 @@
             android:text="登录/注册"
             android:textColor="@android:color/white"
             android:textSize="14sp"/>
+
+        <ImageView
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/b18"/>
     </RelativeLayout>
 
     <!--<RelativeLayout
