--- a/app/src/main/res/layout/view_load_more.xml
+++ b/app/src/main/res/layout/view_load_more.xml
@@ -10,30 +10,64 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-        <FrameLayout
-            android:layout_width="33dp"
-            android:layout_height="33dp">
+        <RelativeLayout
+            android:layout_width="41dp"
+            android:layout_height="60dp">
 
-            <ProgressBar
+            <RelativeLayout
+                android:id="@+id/start_load"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:indeterminateDrawable="@drawable/setting_container_progress_bar"/>
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/people"
+                    android:layout_width="41dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/node_modules_jdreactcorelib_libraries_jdscrollview_images_app_refresh_people_0"/>
+
+                <ImageView
+                    android:id="@+id/goods"
+                    android:layout_width="14dp"
+                    android:layout_height="12dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/node_modules_jdreactcorelib_libraries_jdscrollview_images_app_refresh_goods_0"/>
+
+            </RelativeLayout>
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/ws"/>
+                android:id="@+id/load_ing"
+                android:layout_width="41dp"
+                android:layout_height="60dp"
+                android:background="@drawable/refresh_animation"
+                android:visibility="gone"/>
 
-        </FrameLayout>
+        </RelativeLayout>
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="加载中"
-            android:textSize="14sp"/>
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="让购物更健康"
+                android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/text_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:text="下拉刷新..."
+                android:textSize="10sp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
