--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,6 +112,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/tv_regist"
                 android:layout_marginLeft="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
