--- a/app/src/main/res/layout/item_title_menu1.xml
+++ b/app/src/main/res/layout/item_title_menu1.xml
@@ -8,39 +8,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/jd_shop"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
+            android:drawableTop="@mipmap/jd_shop"
             android:gravity="center"
             android:text="京东超市"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/global"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
+            android:drawableTop="@mipmap/global"
             android:gravity="center"
-            android:text="京东超市"
+            android:text="全球购"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/clothing"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
+            android:drawableTop="@mipmap/clothing"
             android:gravity="center"
-            android:text="京东超市"
+            android:text="服装城"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/seafood"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
+            android:drawableTop="@mipmap/seafood"
             android:gravity="center"
-            android:text="京东超市"
+            android:text="京东生鲜"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/jddj"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
+            android:drawableTop="@mipmap/jddj"
             android:gravity="center"
-            android:text="京东超市"
+            android:text="京东到家"
             android:layout_height="wrap_content"/>
     </LinearLayout>
     <LinearLayout
@@ -48,39 +53,44 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/recharge"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
+            android:drawableTop="@mipmap/recharge"
+            android:gravity="center"
+            android:text="充值缴费"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/jingdou"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:drawableTop="@mipmap/jingdou"
+            android:gravity="center"
+            android:text="领京豆"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/zhuanqian"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:drawableTop="@mipmap/zhuanqian"
+            android:gravity="center"
+            android:text="惠赚钱"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/plus"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:drawableTop="@mipmap/plus"
             android:gravity="center"
             android:text="京东超市"
             android:layout_height="wrap_content"/>
         <TextView
+            android:id="@+id/ticket"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
+            android:drawableTop="@mipmap/ticket"
             android:gravity="center"
-            android:text="京东超市"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
-            android:gravity="center"
-            android:text="京东超市"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
-            android:gravity="center"
-            android:text="京东超市"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:drawableTop="@mipmap/v8"
-            android:gravity="center"
-            android:text="京东超市"
+            android:text="领券"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
