--- a/app/src/main/res/layout/item_type_list.xml
+++ b/app/src/main/res/layout/item_type_list.xml
@@ -20,19 +20,33 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/item_type_name"
             android:ellipsize="end"
             android:maxLines="2"
             android:text="名字一定要长长长长长长长长长长长长长长长长长长长长长长长长"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/money"
-            android:text="价格"
+        <LinearLayout
             android:layout_marginTop="30dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/item_type_primary_money"
+                android:text="原价"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_marginLeft="14dp"
+                android:id="@+id/item_type_money"
+                android:text="现价"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
 
         <LinearLayout
             android:orientation="horizontal"
@@ -40,13 +54,13 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/evaluation"
+                android:id="@+id/item_type_evaluation"
                 android:text="评价数量"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:id="@+id/goodEvaluation"
+                android:id="@+id/item_type_goodEvaluation"
                 android:layout_marginLeft="8dp"
                 android:text="好评率"
                 android:layout_width="wrap_content"
