--- a/app/src/main/res/layout/view_type_header.xml
+++ b/app/src/main/res/layout/view_type_header.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/ll"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/hide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -43,70 +41,54 @@
             android:padding="8dp">
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="综合"/>
+                android:id="@+id/type_sort_comprehensive"
+                style="@style/TypeTextStyle"
+                android:drawableRight="@drawable/selector_sort"
+                android:text="评价"/>
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:gravity="center"
+                android:id="@+id/type_sort_volume"
+                style="@style/TypeTextStyle"
+                android:drawableRight="@drawable/selector_sort"
                 android:text="销量"/>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="30dp"
+            <FrameLayout
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="价格"/>
+                android:layout_width="0dp"
+                android:layout_height="30dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:textColor="@color/selector_text"
+                    android:id="@+id/type_sort_price"
+                    android:text="价格"/>
+
+                <ImageView
+                    android:id="@+id/type_sort_price_selector"
+                    android:layout_toRightOf="@id/type_sort_price"
+                    android:src="@drawable/shang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <ImageView
+                    android:layout_below="@id/type_sort_price_selector"
+                    android:layout_toRightOf="@id/type_sort_price"
+                    android:src="@drawable/selector_sort"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+
+            </FrameLayout>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
+                android:clickable="true"
                 android:gravity="center"
                 android:text="筛选"/>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:padding="8dp">
-
-            <Button
-                android:id="@+id/btn_1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="配送"/>
-
-            <Button
-                android:id="@+id/btn_2"
-
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="配送"/>
-
-            <Button
-                android:id="@+id/btn_3"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="配送"/>
-
-            <Button
-                android:id="@+id/btn_4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="配送"/>
         </LinearLayout>
 
     </LinearLayout>
