--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,17 @@
         <item  name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
     </style>
 
+
+    <style name="TypeTextStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textColor">@color/selector_text</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:clickable">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">35dp</item>
+    </style>
+
+
 </resources>
