--- a/app/src/main/res/layout/item_setting_container_type_1.xml
+++ b/app/src/main/res/layout/item_setting_container_type_1.xml
@@ -40,12 +40,14 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/item_setting_container_icon"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
                     android:layout_marginRight="5dp"
                     android:background="@drawable/am6"/>
 
                 <TextView
+                    android:id="@+id/item_setting_container_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="妙汇APP"
@@ -59,6 +61,7 @@
 
 
                 <TextView
+                    android:id="@+id/item_setting_container_visits"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="9943人浏览"
@@ -72,6 +75,7 @@
             android:id="@+id/item_setting_container_image"
             android:layout_width="120dp"
             android:layout_height="90dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/ay1"/>
 
     </LinearLayout>
