--- a/app/src/main/res/layout/item_setting_container_type_3.xml
+++ b/app/src/main/res/layout/item_setting_container_type_3.xml
@@ -30,16 +30,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal"
             android:paddingBottom="8dp"
-            android:paddingTop="8dp"
-            android:orientation="horizontal">
+            android:paddingTop="8dp">
 
             <ImageView
                 android:id="@+id/item_setting_container_image1"
                 android:layout_width="0dp"
                 android:layout_height="90dp"
-                android:layout_weight="1"
                 android:layout_marginRight="4dp"
+                android:layout_weight="1"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ay1"/>
 
@@ -47,9 +47,9 @@
                 android:id="@+id/item_setting_container_image2"
                 android:layout_width="0dp"
                 android:layout_height="90dp"
-                android:layout_weight="1"
-                android:layout_marginRight="2dp"
                 android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_weight="1"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ay1"/>
 
@@ -57,8 +57,8 @@
                 android:id="@+id/item_setting_container_image3"
                 android:layout_width="0dp"
                 android:layout_height="90dp"
-                android:layout_weight="1"
                 android:layout_marginLeft="4dp"
+                android:layout_weight="1"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ay1"/>
 
@@ -73,12 +73,14 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/item_setting_container_icon"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/am6"/>
 
             <TextView
+                android:id="@+id/item_setting_container_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="品质省活"
@@ -92,6 +94,7 @@
 
 
             <TextView
+                android:id="@+id/item_setting_container_visits"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="329人浏览"
