--- a/app/src/main/res/layout/shop_car_title.xml
+++ b/app/src/main/res/layout/shop_car_title.xml
@@ -5,15 +5,29 @@
               android:background="@android:color/white"
               android:orientation="vertical">
 
-
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:drawableRight="@mipmap/message"
-        android:gravity="center"
-        android:padding="8dp"
-        android:text="购物车"
-        android:textSize="18dp"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="购物车"
+            android:textSize="18dp"/>
+
+        <ImageView
+            android:id="@+id/chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="8dp"
+            android:src="@mipmap/message"
+            />
+
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
