新增RecyclerLoadMoreView  封装RecyclerView 实现加载更多功能

--- a/app/src/main/res/layout/activity_type_list.xml
+++ b/app/src/main/res/layout/activity_type_list.xml
@@ -53,11 +53,17 @@
                 android:text="配送"/>
         </LinearLayout>
 
-        <com.hellosliu.easyrecyclerview.LoadMoreRecylerView
+        <!--<com.hellosliu.easyrecyclerview.LoadMoreRecylerView-->
+        <!--android:id="@+id/recycle_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+        <!--</com.hellosliu.easyrecyclerview.LoadMoreRecylerView>-->
+
+        <com.young.jdmall.ui.view.RecyclerLoadMoreView
             android:id="@+id/recycle_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </com.hellosliu.easyrecyclerview.LoadMoreRecylerView>
+            android:layout_height="match_parent"/>
+
 
     </LinearLayout>
 
