--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="white">#FFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="text_red">#ec0f38</color>
+    <color name="text_black">#222222</color>
 </resources>
