--- a/app/src/main/res/drawable/item_bar_bg.xml
+++ b/app/src/main/res/drawable/item_bar_bg.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:left="-2dp"
-        android:right="-2dp">
+        android:left="-3px"
+        android:right="-2px"
+        android:top="-3px"
+        >
         <shape>
             <solid android:color="#ffffff"/>
             <stroke
-                android:width="1px"
+                android:width="2px"
                 android:color="#000000"/>
         </shape>
     </item>
