--- a/app/src/main/res/layout/activity_add_edit_receipt_address.xml
+++ b/app/src/main/res/layout/activity_add_edit_receipt_address.xml
@@ -3,32 +3,44 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/item_bar_bg"
         android:padding="14dp">
+
         <ImageView
             android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@mipmap/a_8"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:background="@mipmap/a_8"/>
 
         <TextView
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:text="新建收货地址"
             android:textColor="@android:color/black"
             android:textSize="24sp"/>
+
+        <ImageButton
+            android:id="@+id/ib_delete"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:background="@mipmap/l"
+            android:visibility="gone"/>
     </RelativeLayout>
 
 
-
-
-
     <RelativeLayout
+
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="3dp"
@@ -42,7 +54,7 @@
             android:textColor="#000"
             android:layout_centerVertical="true"
             android:textSize="12sp"
-            android:text="联系人"/>
+            android:text="收货人"/>
 
         <EditText
             android:id="@+id/et_name"
@@ -64,112 +76,45 @@
         android:layout_marginTop="1dp"
         android:background="#fff">
 
-
-        <RadioGroup
-            android:id="@+id/rg_sex"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="90dp"
-            android:orientation="horizontal">
-            <RadioButton
-                android:id="@+id/rb_man"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:text="先生"/>
-            <RadioButton
-                android:id="@+id/rb_women"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:textSize="14sp"
-                android:text="女士"/>
-        </RadioGroup>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="1dp"
-        android:background="#fff">
-
         <TextView
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:textColor="#000"
             android:layout_centerVertical="true"
-            android:textSize="12sp"
-            android:text="联系电话"/>
+            android:layout_marginLeft="10dp"
+            android:text="联系电话"
+            android:textColor="#000"
+            android:textSize="12sp"/>
 
         <EditText
             android:id="@+id/et_phone"
-            android:layout_marginLeft="90dp"
-            android:inputType="phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/ib_delete_phone"
-            android:maxLines="1"
-            android:textSize="14sp"
+            android:layout_marginLeft="90dp"
             android:background="@null"
-            android:hint="你的手机号"/>
+            android:hint="你的手机号"
+            android:inputType="phone"
+            android:maxLines="1"
+            android:textSize="14sp"/>
 
         <ImageButton
             android:id="@+id/ib_delete_phone"
-            android:layout_marginRight="10dp"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_centerVertical="true"
-            android:background="@mipmap/icon_close"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"
+            android:background="@mipmap/a85"
             android:visibility="invisible"
-            android:layout_toLeftOf="@+id/ib_add_phone_other"
             />
 
-        <ImageButton
-            android:id="@+id/ib_add_phone_other"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_centerVertical="true"
-            android:background="@mipmap/address_icon_reserve"
-            />
+
 
     </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/rl_phone_other"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="1dp"
-        android:background="#fff">
 
-        <EditText
-            android:id="@+id/et_phone_other"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="90dp"
-            android:inputType="phone"
-            android:layout_toLeftOf="@+id/ib_delete_phone_other"
-            android:maxLines="1"
-            android:textSize="14sp"
-            android:background="@null"
-            android:hint="备选电话"/>
-        <ImageButton
-            android:id="@+id/ib_delete_phone_other"
-            android:layout_marginRight="10dp"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:layout_centerVertical="true"
-            android:background="@mipmap/icon_close"
-            android:visibility="invisible"
-            android:layout_alignParentRight="true"
-            />
 
-    </RelativeLayout>
     <RelativeLayout
+        android:id="@+id/rl_address_area"
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -183,10 +128,10 @@
             android:textColor="#000"
             android:layout_centerVertical="true"
             android:textSize="12sp"
-            android:text="收货地址"
+            android:text="所在地区"
             />
 
-        <EditText
+        <TextView
             android:id="@+id/et_receipt_address"
             android:layout_marginLeft="90dp"
             android:layout_width="match_parent"
@@ -195,14 +140,33 @@
             android:maxLines="1"
             android:textSize="14sp"
             android:background="@null"
-            android:hint="小区/写字楼/学校"/>
+            />
+
+        <ImageView
+            android:id="@+id/iv_address_area"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@mipmap/a5j"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"/>
     </RelativeLayout>
     <RelativeLayout
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="1dp"
-        android:background="#fff">
+        android:background="#fff"
+        >
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#000"
+            android:layout_centerVertical="true"
+            android:textSize="12sp"
+            android:text="详细地址"
+            />
 
         <EditText
             android:id="@+id/et_detail_address"
@@ -213,7 +177,7 @@
             android:maxLines="1"
             android:textSize="14sp"
             android:background="@null"
-            android:hint="详细地址(如门牌号等)"/>
+            android:hint="如门牌号等"/>
     </RelativeLayout>
     <RelativeLayout
         android:visibility="visible"
