--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-    >
+              android:layout_height="match_parent">
 
     <RelativeLayout
+        android:background="@drawable/item_bar_bg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="14dp">
@@ -18,37 +18,24 @@
             android:background="@mipmap/a_8"/>
 
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="收货地址管理"
+            android:text="收藏夹"
             android:textColor="@android:color/black"
             android:textSize="24sp"/>
+
+
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_receipt_address"
-        android:layout_width="match_parent"
-        android:background="#c6c6c9"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-
-        android:gravity="center">
 
 
-        <Button
-            android:id="@+id/bt_add_address"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rl_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="新建地址"
-            android:textColor="@android:color/white"
-            android:background="@android:color/holo_red_dark"/>
-    </LinearLayout>
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
 </LinearLayout>
