--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,18 +64,21 @@
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"/>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_marginTop="10dp"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/tv_pwd"
+                    android:layout_centerVertical="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="密码"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
                 <EditText
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@id/tv_pwd"
                     android:id="@+id/et_password"
                     android:layout_marginLeft="44dp"
                     android:layout_width="wrap_content"
@@ -83,8 +86,16 @@
                     android:background="@null"
                     android:hint="请输入密码"
                     />
-
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/pwd_delete"
+                    android:visibility="invisible"
+                    android:layout_marginRight="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@mipmap/a85"/>
+            </RelativeLayout>
 
             <ImageView
                 android:layout_marginTop="10dp"
@@ -100,7 +111,7 @@
             android:id="@+id/bt_login"
             android:layout_margin="10dp"
             android:layout_marginTop="30dp"
-            android:layout_width="360dp"
+            android:layout_width="match_parent"
             android:text="登录"
             android:textColor="@android:color/darker_gray"
             android:layout_height="wrap_content"/>
