--- a/app/src/main/res/layout/item_recepit_address.xml
+++ b/app/src/main/res/layout/item_recepit_address.xml
@@ -1,38 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:background="@drawable/item_bg"
+
               android:orientation="vertical"
               android:padding="20dp"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="收件人："
+            android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="收件人"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="@android:color/black"/>
-
         <TextView
+            android:layout_marginLeft="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="电话："
+            android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/tv_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="电话"
-            android:textSize="20sp"
-            android:layout_marginLeft="40dp"
+            android:textSize="18sp"
             android:textColor="@android:color/black"/>
 
     </LinearLayout>
 
-    <TextView
+    <LinearLayout
+        android:layout_marginTop="10dp"
+
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="地址"
-        android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        android:textColor="@android:color/black"/>
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="地址："
+            android:textSize="18sp"/>
+
+        <TextView
+            android:id="@+id/tv_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="地址"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"/>
+    </LinearLayout>
 
     <ImageView
         android:layout_marginTop="20dp"
@@ -41,17 +68,36 @@
         android:background="@android:color/darker_gray"/>
 
     <RelativeLayout
+
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-
-        <CheckBox
+        <LinearLayout
+            android:id="@+id/ll_select"
+            android:orientation="horizontal"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="设为默认"/>
+            android:gravity="center_vertical">
+            <ImageView
+                android:id="@+id/iv_select"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@mipmap/xuanzhezhuangtai"/>
+            <TextView
+                android:id="@+id/tv_select"
+                android:layout_marginLeft="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="默认地址"/>
+
+        </LinearLayout>
+
+
 
         <TextView
+
             android:drawablePadding="10dp"
             android:gravity="center"
             android:drawableLeft="@mipmap/a_p"
@@ -65,6 +111,7 @@
             android:textColor="@android:color/black"/>
 
         <TextView
+            android:id="@+id/tv_edit"
             android:drawablePadding="10dp"
             android:layout_marginRight="20dp"
             android:textColor="@android:color/black"
