新增FlowLayout 用于实现热搜布局 新增 SearchActivity

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_220">220dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
 </resources>
